[workspace]
members = [
    "dec_01",
    "dec_02",
    "dec_03",
    "dec_04",
    "dec_05",
    "dec_06",
    "dec_07",
    "dec_08",
    "dec_09",
    "dec_10",
    "dec_11",
    "dec_12",
    "dec_13",
    "dec_14",
    "dec_15",
    "dec_16",
    "dec_17",
    "dec_18",
    "dec_19",
    "dec_20",
    "dec_20",
    "dec_21",
    "dec_22",
    "dec_23",
    "dec_24",
    "dec_25",
]
